Fix collapsed content padding

--- a/themes/cv-theme/static/css/style.css
+++ b/themes/cv-theme/static/css/style.css
@@ -265,7 +265,9 @@ main {
 }
 
 .collapsible-content.collapsed {
-    margin: 0;
+    padding: 0 1.5em;
+    /* margin-bottom: 0em */
+    /* margin: 0 -1.5em; */
     max-height: 0;
     opacity: 0;
 }
